[project]
name = "dowjones"
version = "0.1.0"
description = "Financial sentiment analysis"
authors = [{ name = "Andres Di Giovanni", email = "andresdigiovanni@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "huggingface-hub[hf-xet]>=0.31.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "transformers>=4.52.1",
    "transformers-interpret>=0.10.0",
    "xgboost>=3.0.1",
]

[dependency-groups]
commits = [
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
